[package]
name = "jsonlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
evalexpr = "8.1.0"
num_cpus = "1.13.1"
rayon = "1.5.3"
regex = { version = "1.6.0" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
