[package]
name = "jsonlog"
version = "0.1.0"
edition = "2021"
description = "A command line tool make parse json logs easy."
authors = ["miganzi jxz_211@163.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
evalexpr = "8.1.0"
num_cpus = "1.13.1"
rayon = "1.5.3"
regex = { version = "1.6.0" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1
